Fix non-default-zoom formatting on mobile browsers. Using width=device-width viewports means page scaled if any content is too wide (here, the table). Using shrink-to-fit=no aims to prevent this scaling, but only has an effect on Safari.

--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -35,5 +35,5 @@
 
 .Table th {
   padding-left: 1em;
-  padding-right: 10em;
+  padding-right: 1em;
 }
